--- a/app/templete/home.html
+++ b/app/templete/home.html
@@ -5,13 +5,16 @@
     <title>HOME</title>
 </head>
 <body>
+<a href="{{url}}">{{name}}</a> <br>
+{{dwa}}  <br>
 
 <if name="zero">
     testuje to if
 </if name="zero">
 
+
 <loop name="loop">
-    [#number#]
+    {{number}}
 </loop name="loop">
 
 </body>
