--- a/app/templete/home.html
+++ b/app/templete/home.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HOME</title>
+    <title>{{name}}</title>
 </head>
 <body>
-<a href="{{url}}">{{name}}</a> <br>
+<a href="{{url}}">ink</a> <br>
 {{dwa}}  <br>
 
 <if name="zero">
