--- a/app/templete/register.html
+++ b/app/templete/register.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Register</title>
-    </head>
-    <body>
-        <h2>Register</h2>
-        {{form}}
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Register</title>
+</head>
+<body>
+
+<br>
+<ul>
+    <loop name="erros">
+        <li>{{error}}</li>
+    </loop name="erros">
+</ul>
+<br>
+
+{{form}}
+
+
+</body>
 </html>
