--- a/app/templete/login.html
+++ b/app/templete/login.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{name}}</title>
+    <title>Register</title>
 </head>
 <body>
-<a href="{{url}}">ink</a> <br>
-
-{{dwa}}  <br>
 
 <br>
 <ul>
@@ -19,9 +16,6 @@
 
 {{form}}
 
-<if name="zero">
-    testuje to if
-</if name="zero">
 
 </body>
 </html>
